Completely reworked the tests